# see pypa sample
# https://github.com/pypa/sampleproject/blob/main/pyproject.toml
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[project]
name = "postman_test"

description = "Post and git collaboration for DS & QA"
authors = [
    { name = "Ekemini Bassey" }
]
readme = "README.md"
requires-python = ">=3.9, <4"
license = {file = "LICENSE.txt"}
version = "1.0.0"

dependencies = [
    "pyyaml>=5.4.1",
    "loguru>=0.6.0",
    "click>=8.1.3",
    "pytest>=7.1.3",
    "uvicorn[standard]>=0.18.3",
    "fastapi>=0.85.0",
    "termcolor>=2.0.1",
    "google-cloud-storage==1.44.0",
    "pandas==1.3.5",
    "kfp==1.8.21",
    "google-cloud-aiplatform==1.18.1",
    "google-cloud-pipeline-components==0.1.9",
    "protobuf==3.19.5",
    "fastavro==1.7.0",
    "google-cloud-pubsub==2.9.0",
    "pipesql @ git+https://github.com/WALTER-GROUP/pipesql.git@main",
    "keplergl==0.2.2",
    "shapely<2",
]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["postman_test*"]  # package names should match these glob patterns (["*"] by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project.urls]  # Optional
"Homepage" = "https://github.com/EkeminiBassey1/postman_test"
"Bug Reports"= "http://lkwjira.lkw-walter.com/projects/DSU"
"Source"= "https://github.com/EkeminiBassey1/postman_test"

[project.scripts]
# 
mypipeline="postman_test.pipeline.cli:cli"
#

[build-system]
# we still use setup tools
requires = ["setuptools>=58"]
build-backend = "setuptools.build_meta"


[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools.package-data]
postman_test = ["utils/api_json/*"]
